fix typo in index.html
fixes #1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="navbar-inner">
     <div class="container"> 
         
-        <a class="brand" href="index.html">Linux Bootstrap Dashboad </a>
+        <a class="brand" href="index.html">Linux Bootstrap Dashboard </a>
       <div class="nav-collapse">
             
       </div>
