added base.js. This should fix issues with anchor tags padding

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script>
 <script src="js/odometer.js"></script>
 <script src="js/magic_happens_here.js"></script>
+<script src="js/base.js"></script>
 
 </body>
 </html>
