Added option to filter processes

--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
               <div id="refresh-ps" onClick="javascript:get_ps();" class="btn btn-mini">
                 <i class="icon-refresh"></i> &nbsp;&nbsp;Refresh
               </div>
+			  <div class="pull-right">
+                <input type="text" id="filter-ps" class="widget-search" placeholder="search..." />
+              </div>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
