Included base.js in index.html

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="js/jquery.js"></script> 
 <script src="js/bootstrap.js"></script>
+<script src="js/base.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script>
 <script src="js/odometer.js"></script>
 <script src="js/magic_happens_here.js"></script>
