Simplify smooth-scrolling.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li><a href="#refresh-os"><i class="icon-dashboard"></i><span>General</span> </a> </li>
-        <li><a href="#refresh-df"><i class="icon-list-alt"></i><span>Disk</span> </a> </li>
-        <li><a href="#refresh-ps"><i class="icon-list-alt"></i><span>CPU</span> </a> </li>
-        <li><a href="#refresh-ram"><i class="icon-list-alt"></i><span>RAM</span> </a> </li>
-        <li><a href="#refresh-users"><i class="icon-group"></i><span>Users</span> </a> </li>
-        <li><a href="#refresh-ispeed"><i class="icon-exchange"></i><span>Network</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-os"><i class="icon-dashboard"></i><span>General</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-df"><i class="icon-list-alt"></i><span>Disk</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-ps"><i class="icon-list-alt"></i><span>CPU</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-ram"><i class="icon-list-alt"></i><span>RAM</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-users"><i class="icon-group"></i><span>Users</span> </a> </li>
+        <li><a class="js-smoothscroll" href="#refresh-ispeed"><i class="icon-exchange"></i><span>Network</span> </a> </li>
       </ul>
     </div>
     <!-- /container --> 
