Label changed: actually isn't CPUs but cores

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="widget-content">
                <div class="widget-content">
                <div style="text-align:center;">
-                  <b>Number of CPUs:</b> <span class="lead" id="cpu-number">0</span>
+                  <b>Number of cores:</b> <span class="lead" id="core-number">0</span>
                 </div>
                 <div id="big_stats" class="cf">
                   
