Removed cache script; changed main file back to html from php

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-include_once('compressor.php');
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +26,7 @@ include_once('compressor.php');
   <div class="navbar-inner">
     <div class="container"> 
         
-        <a class="brand" href="index.php">Linux Bootstrap Dashboard </a>
+        <a class="brand" href="/linux-dash/">Linux Bootstrap Dashboard </a>
       <div class="nav-collapse">
             
       </div>
