There was two identical id's "big_stats". Moved to css classes.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                <div style="text-align:center;">
                   <b>Number of cores:</b> <span class="lead" id="core-number">0</span>
                 </div>
-                <div id="big_stats" class="cf">
+                <div class="cf big_stats">
                   
                   <div class="stat"> 
                       <i class="icon-#">1 min</i>
@@ -158,7 +158,7 @@
               <div class="widget big-stats-container">
                 <div class="widget-content">
                   
-                  <div id="big_stats" class="cf">
+                  <div class="cf big_stats">
                     <div class="stat"> 
                         <i class="icon-#">Total</i>
                         <span class="value odometer" id="ram-total"></span> MB
