Changed deprecated "align" attribute to css.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="main-inner"> 
     <div class="container">
     
-        <div align="center" class="lead">
+        <div class="lead" style="text-align: center;">
             <br>
             <div class="btn js-refresh-info" id="refresh-all">
 				<i class="icon-refresh pop" rel="popover" 
@@ -286,7 +286,7 @@
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
-                <div align="center" style="padding:10px;">
+                <div style="padding:10px; text-align: center;">
                     <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate">0</span>
                     <span class="lead">Mbps</span>
                 </div>
