--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <br>
               <div style="text-align:center;">
               <b>OS:</b> <span class="" id="os-info"></span><br>
-              <b>Uptime:</b> <span class="odometer" id="os-uptime"></span> Hours<br>
+              <b>Uptime:</b> <span id="os-uptime"></span><br>
               <b>Hostname:</b> <span class="" id="os-hostname"></span><br>
               <br><br>
               </div>
