added block/widget for dnsmasq leases

--- a/index.html
+++ b/index.html
@@ -190,6 +190,63 @@
         
      </div>
     
+
+
+
+
+   <div class="row">
+         <div class="span6">
+           <div class="widget widget-table">
+            <div class="widget-header"> <i class="icon-list"></i>
+              <h3>DNS Leases</h3>
+              <div id="refresh-df" class="btn btn-mini js-refresh-info">
+                <i class="icon-refresh"></i> &nbsp;&nbsp;Refresh
+              </div>
+            </div>
+            <!-- /widget-header -->
+            <div class="widget-content">
+              <table id="dnsmasqleases_dashboard" class="table table-hover table-condensed table-bordered" >
+              </table>
+            </div>
+            <!-- /widget-content -->
+          </div>
+          <!-- /widget -->
+         </div>
+
+          <div class="span6">
+          </div>
+          <!-- /widget -->
+
+          </div>
+        <!-- /span6 -->
+
+
+        </div>
+    <!-- /row -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="row">
          <div class="span6">
            <div class="widget widget-table">
