--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
           <div class="widget-header"> <i class="icon-list"></i>
             <h3>DNS Leases</h3>
-            <div id="refresh-df" class="btn btn-mini js-refresh-info">
+            <div id="refresh-dnsmasqleases" class="btn btn-mini js-refresh-info">
               <i class="icon-refresh"></i> &nbsp;&nbsp;Refresh
             </div>
           </div> <!-- /widget-header -->
