--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 ================================================== --> 
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="js/jquery.js"></script> 
+<script src="js/jquery-ui.min.js"></script> 
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.dataTables.min.js"></script>
 <script src="js/odometer.js"></script>
