--- a/index.html
+++ b/index.html
@@ -346,8 +346,25 @@
       </div>
       <!-- /row -->
       
+      <div class="row">
+        <div class="span12">
+          <div class="widget widget-table">
+            <div class="widget-header"> <i class="icon-dashboard"></i>
+              <h3> Netstat </h3>
+              <div id="refresh-netstat" class="btn btn-mini js-refresh-info">
+              <i class="icon-refresh"></i>
+            </div> 
+          </div>
+          <div class="widget-content">
+            <table id="netstat_dashboard" class="table table-hover table-condensed table-bordered" >
+            </table>
+          </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
-    <!-- /container --> 
   </div>
   <!-- /main-inner --> 
 </div>
