--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
           <div class="widget widget-table">
             <div class="widget-header"> <i class="icon-dashboard"></i>
               <h3> Netstat </h3>
-              <div id="refresh-netstat" class="btn btn-mini js-refresh-info">
-              <i class="icon-refresh"></i>
+              <div id="refresh-netstat" class="btn btn-mini icon-refresh js-refresh-info">
             </div> 
           </div>
           <div class="widget-content">
