make netstat more human readable

--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
       <!-- /row -->
       
       <div class="row">
-        <div class="span12">
+        <div class="span4">
           <div class="widget widget-table">
             <div class="widget-header"> <i class="icon-dashboard"></i>
-              <h3> Netstat </h3>
+              <h3> Network Statistics </h3>
               <div id="refresh-netstat" class="btn btn-mini icon-refresh js-refresh-info">
             </div> 
           </div>
