fix link to refresh index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 <div class="navbar navbar-fixed-top" style="">
   <div class="navbar-inner">
     <div class="container"> 
-        
-        <a class="brand" href="/linux-dash/">Linux Bootstrap Dashboard </a>
-      <div class="nav-collapse">
-            
+      <a class="brand" href="./">Linux Bootstrap Dashboard</a>
+      <div class="nav-collapse">      
       </div>
       <!--/.nav-collapse --> 
     </div>
