Removed external dependencies; replaced github banner;

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="css/google-fonts.css" rel="stylesheet">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/pages/dashboard.css" rel="stylesheet">
@@ -20,9 +19,6 @@
         <![endif]-->
   </head>
   <body>
-
-<!-- Github Fork Image-->
-<a href="https://github.com/afaqurk/linux-dash"><img style="position: absolute; top: 0; right: 0; border: 0;z-index:99999999;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 <div class="navbar navbar-fixed-top" style="">
   <div class="navbar-inner">
@@ -48,6 +44,15 @@
         <li><a class="js-smoothscroll" href="#refresh-users"><i class="icon-group"></i><span>Users</span> </a> </li>
         <li><a class="js-smoothscroll" href="#refresh-ispeed"><i class="icon-exchange"></i><span>Network</span> </a> </li>
       </ul>
+
+	<ul class="nav pull-right">
+	 <li>
+	  <a class="js-smoothscroll" target="_blank" href="http://github.com/afaqurk/linux-dash">
+	    <i class="lead icon-github-sign"></i> 
+	    <span class="lead">Contribute on GitHub</span>
+	  </a>
+	 </li>
+	</ul>
     </div>
     <!-- /container --> 
   </div>
@@ -382,7 +387,7 @@
   <div class="footer-inner">
     <div class="container">
       <div class="row">
-        <div class="span12"> &copy; 2014 <a href="http://github.com/afaqurk">Afaq Tariq</a>. </div>
+        <div class="span12">Original Author: <a href="http://github.com/afaqurk">Afaq Tariq</a>. </div>
         <!-- /span12 --> 
       </div>
       <!-- /row --> 
