Changed ugly popover to tooltip

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div class="container">
     
         <div class="lead" style="text-align: center;">
-            <div class="btn icon-refresh pop js-refresh-info" rel="popover"
-               data-content="Click here to refresh all widgets on the page"
-               data-original-title="Refresh All Widgets" id="refresh-all">
+            <div class="btn icon-refresh js-refresh-info"
+               data-title="Refresh all widgets!"
+               data-toggle="tooltip" id="refresh-all">
            </div>
            <div>
                A simple web dashboard to monitor your server.
