fix #125 - contribute button broken

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<ul class="nav pull-right">
 	 <li>
-	  <a class="js-smoothscroll" target="_blank" href="http://github.com/afaqurk/linux-dash">
+	  <a target="_blank" href="http://github.com/afaqurk/linux-dash">
 	    <i class="lead icon-github-sign"></i> 
 	    <span class="lead">Contribute on GitHub</span>
 	  </a>
