Changed Title and meta tags to be consistent

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Server Monitoring Dashboard</title>
+    <title>linux-dash : Server Monitoring Web Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -22,7 +23,7 @@
 <div class="navbar navbar-fixed-top" style="">
   <div class="navbar-inner">
     <div class="container"> 
-      <a class="brand" href="./">Linux Bootstrap Dashboard</a>
+      <a class="brand" href="./">linux-dash</a>
       <div class="nav-collapse">      
       </div>
       <!--/.nav-collapse --> 
