Added bandwidth (TX/RX) widget

--- a/index.html
+++ b/index.html
@@ -291,6 +291,25 @@
           </div>
           <!-- /widget -->
          </div><!-- /span -->
+
+         <div class="span3">
+           <div class="widget widget-table">
+            <div class="widget-header"> <i class="icon-exchange"></i>
+              <h3>Bandwidth</h3>
+              <div id="refresh-bandwidth" class="btn icon-refresh js-refresh-info">
+              </div>
+            </div>
+            <!-- /widget-header -->
+            <div class="widget-content">
+                <div style="padding:10px;text-align:center;">
+                    RX: <span class="lead odometer" style="margin-top:11px;" id="bw-rx">0</span>&nbsp;&nbsp;|&nbsp;&nbsp;
+                    TX: <span class="lead odometer" style="margin-top:11px;" id="bw-tx"></span>
+                </div>
+            </div>
+            <!-- /widget-content -->
+          </div>
+          <!-- /widget -->
+         </div><!-- /span -->
          
       </div>
       <!-- /row -->
