add Ping widget

--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
       <!-- /row -->
       
       <div class="row">
+
         <div class="span4">
           <div class="widget widget-table">
             <div class="widget-header"> <i class="icon-dashboard"></i>
@@ -397,6 +398,21 @@
           </div>
           </div>
         </div>
+
+        <div class="span4">
+            <div class="widget widget-table">
+                <div class="widget-header"> <i class="icon-exchange"></i>
+                    <h3>Ping</h3>
+                    <div id="refresh-ping" class="btn btn-mini icon-refresh js-refresh-info">
+                    </div> 
+                </div>
+                <div class="widget-content">
+                    <table id="ping_dashboard" class="table table-hover table-condensed table-bordered" >
+                    </table>
+                </div>
+            </div>
+        </div>
+
       </div>
 
 
