--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/pages/dashboard.css" rel="stylesheet" type="text/css">
-        <link href="css/odometer.css" rel="stylesheet" type="text/css"><!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <link href="css/odometer.css" rel="stylesheet" type="text/css">
+        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
