remove btn-mini class from several refresh btns

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                     <h3>
                                         DNS Leases
                                     </h3>
-                                    <div id="refresh-dnsmasqleases" class="btn btn-mini icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-dnsmasqleases" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
                                     <table id="dnsmasqleases_dashboard" class="table table-hover table-condensed table-bordered"></table>
@@ -238,7 +238,7 @@
                                     <h3>
                                         Network Statistics
                                     </h3>
-                                    <div id="refresh-netstat" class="btn btn-mini icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-netstat" class="btn icon-refresh js-refresh-info"></div>
                                 </div>
                                 <div class="widget-content">
                                     <table id="netstat_dashboard" class="table table-hover table-condensed table-bordered"></table>
@@ -252,7 +252,7 @@
                                     <h3>
                                         Ping
                                     </h3>
-                                    <div id="refresh-ping" class="btn btn-mini icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-ping" class="btn icon-refresh js-refresh-info"></div>
                                 </div>
                                 <div class="widget-content">
                                     <table id="ping_dashboard" class="table table-hover table-condensed table-bordered"></table>
