host info on main navbar
if using this in several servers it gets tricky to find out which one
you're looking at just with the 'General' tab

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="navbar navbar-fixed-top" style="">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="brand" href="./">linux-dash</a>
+                    <a class="brand" href="./">linux-dash - <span class="" id="os-hostname"></span></a>
                     <div class="nav-collapse"></div>
                 </div>
             </div>
