--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             A simple web dashboard to monitor your server.
                         </div>
                     </div>
-                    <div class="row">
+                    <div id="widgets" class="row">
                         <div class="span3">
                             <div id="general-info-widget" class="widget widget-table action-table">
                                 <div class="widget-header">
@@ -133,7 +133,7 @@
                                     <div id="refresh-ram" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
-                                    <div class="widget big-stats-container">
+                                    <div class="big-stats-container">
                                         <div class="widget-content">
                                             <div class="cf big_stats">
                                                 <div class="stat">
