--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                     <div style="text-align:center;">
                                         <b>OS:</b> <span class="" id="os-info"></span><br>
                                         <b>Uptime:</b> <span id="os-uptime"></span><br>
+                                        <b>Server Time:</b> <span class="" id="os-time"></span><br>
                                         <b>Hostname:</b> <span class="" id="os-hostname"></span><br>
                                         <br>
                                         <br>
