--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                 <div class="container">
                     <a class="brand" href="./">linux-dash</a>
                     <div class="nav-collapse"></div>
+
+		    <ul class="nav pull-right">
+                        <li>
+                            <a target="_blank" href="http://github.com/afaqurk/linux-dash">
+				<i class="lead icon-github-sign"></i> 
+				<span class="lead">Contribute on GitHub</span>
+			    </a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -52,11 +62,6 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i id="closed-widget-count">0</i> <span>Closed Widgets <i class="icon-caret-down"></i></span></a>
                             <ul class="dropdown-menu" id="closed-widget-list"></ul>
-                        </li>
-                    </ul>
-                    <ul class="nav pull-right">
-                        <li>
-                            <a target="_blank" href="http://github.com/afaqurk/linux-dash"><i class="lead icon-github-sign"></i> <span class="lead">Contribute on GitHub</span></a>
                         </li>
                     </ul>
                 </div><!-- /container -->
