add upstream speed to the Internet Speed widget

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
                     </div>
                     <div id="widgets" class="">
 
-		      <div class="row">
-
+                    <div class="row">
                         <div class="span3">
                             <div id="general-info-widget" class="widget widget-table action-table">
                                 <div class="widget-header">
@@ -262,10 +261,18 @@
                                     <div id="refresh-ispeed" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
-                                    <div style="padding:10px; text-align: center;">
-                                        <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate">0</span> 
-					<span class="lead">Mbps</span>
+
+                                    <div style="padding:0px; text-align: center;">
+                                        <i class="icon-download" style="font-size:18px;"></i>
+                                        <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate-downstream">0</span>
+                                        <span class="lead">Mbps</span>
                                     </div>
+                                    <div style="padding:0px; text-align: center;">
+                                        <i class="icon-upload" style="font-size:18px;"></i>
+                                        <span class="lead value odometer" style="margin-top:11px;" id="ispeed-rate-upstream">0</span>
+                                        <span class="lead">Mbps</span>
+                                    </div>
+
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span -->
