--- a/index.html
+++ b/index.html
@@ -19,27 +19,35 @@
         <![endif]-->
     </head>
     <body>
-        <div class="navbar navbar-fixed-top" style="">
+        <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
                     <a class="brand" href="./">linux-dash</a>
-                    <div class="nav-collapse"></div>
+                    <div class="nav-collapse">
 
-		    <ul class="nav pull-right">
-                        <li>
-                            <a target="_blank" href="http://github.com/afaqurk/linux-dash">
-				<i class="lead icon-github-sign"></i> 
-				<span class="lead">Contribute on GitHub</span>
-			    </a>
-                        </li>
-                    </ul>
-
+		        <ul class="nav pull-right">
+                            <li>
+                                <a target="_blank" href="http://github.com/afaqurk/linux-dash">
+			  	    <i class="lead icon-github-sign"></i> 
+				    <span class="lead">Contribute on GitHub</span>
+			        </a>
+                            </li>
+                        </ul>
+		    </div>
                 </div>
             </div>
         </div>
-        <div class="subnavbar visible-desktop visible-tablet">
+        <div class="subnavbar">
             <div class="subnavbar-inner">
-                <div class="container">
+
+ 	        <a class="btn btn-navbar btn-info visible-phone" data-toggle="collapse" data-target=".nav-collapse">
+        	    <span class="icon-bar"></span>
+        	    <span class="icon-bar"></span>
+        	    <span class="icon-bar"></span>
+      		</a>
+
+                <div class="container nav-collapse">
+
                     <ul class="mainnav">
                         <li>
                             <a class="js-smoothscroll" href="#refresh-os"><i class="icon-dashboard"></i><span>General</span></a>
