Adding rotation effect to internet speed refresh icon

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <h3>
                                         Internet Speed
                                     </h3>
-                                    <div id="refresh-ispeed" class="btn icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-ispeed" class="btn js-refresh-info"><span class="icon-refresh"></span></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
 
