--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                     <h3>
                                         Ping
                                     </h3>
-                                    <div id="refresh-ping" class="btn icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-ping" class="btn js-refresh-info"><span class="icon-refresh"></span></div>
                                 </div>
                                 <div class="widget-content">
                                     <table id="ping_dashboard" class="table table-hover table-condensed table-bordered"></table>
@@ -322,7 +322,7 @@
                                     <h3>
                                         Bandwidth
                                     </h3>
-                                    <div id="refresh-bandwidth" class="btn icon-refresh js-refresh-info"></div>
+                                    <div id="refresh-bandwidth" class="btn js-refresh-info"><span class="icon-refresh"></span></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
                                     <div style="padding:10px;text-align:center;">
