--- a/index.html
+++ b/index.html
@@ -362,6 +362,20 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span6 -->
+                        <div class="span6">
+                            <div id="lastlog-widget" class="widget widget-table action-table">
+                                <div class="widget-header">
+                                    <i class="icon-group"></i>
+                                    <h3>
+                                        Last Login
+                                    </h3>
+                                    <div id="refresh-lastlog" class="btn icon-refresh js-refresh-info"></div>
+                                </div><!-- /widget-header -->
+                                <div class="widget-content">
+                                    <table id="lastlog_dashboard" class="table table-hover table-bordered table-condensed"></table>
+                                </div><!-- /widget-content -->
+                            </div><!-- /widget -->
+                        </div><!-- /span6 -->
                        </div><!--./row -->
 
                       <div class="row">
