cleanup general info widget HTML, use CSS

--- a/index.html
+++ b/index.html
@@ -123,16 +123,23 @@
                                     <div id="refresh-os" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
-                                    <br>
-                                    <div style="text-align:center;">
-                                        <b>OS:</b> <span class="" id="os-info"></span><br>
-                                        <b>Uptime:</b> <span id="os-uptime"></span><br>
-                                        <b>Server Time:</b> <span class="" id="os-time"></span><br>
-                                        <b>Hostname:</b> <span class="" id="os-hostname"></span><br>
-                                        <br>
-                                        <br>
+                                    <div class="general-info-item">
+                                        <span class="general-title">OS</span>
+                                        <span class="general-data" id="os-info"></span>
                                     </div>
-                                </div><!-- /widget-content -->
+                                    <div class="general-info-item">
+                                        <span class="general-title">Uptime</span>
+                                        <span id="os-uptime"></span>
+                                    </div>
+                                    <div class="general-info-item">
+                                        <span class="general-title">Server Time</span>
+                                        <span id="os-time"></span>
+                                    </div>
+                                    <div class="general-info-item">
+                                        <span class="general-title">Hostname</span>
+                                        <span id="os-hostname"></span>
+                                    </div>
+                                </div>
                             </div><!-- /widget -->
                         </div>
 
