Fixing DHCP Leases, number of cores counting on multi cpu machines and where are programs installed

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <div class="widget-header">
                                     <i class="icon-list"></i>
                                     <h3>
-                                        DNS Leases
+                                        DHCP Leases
                                     </h3>
                                     <div id="refresh-dnsmasqleases" class="btn icon-refresh js-refresh-info"></div>
                                 </div><!-- /widget-header -->
