sabnzbd download speed for linux-dash

--- a/index.html
+++ b/index.html
@@ -293,6 +293,26 @@
                         </div><!-- /span -->
                       </div> <!-- ./row -->
 
+                        <div class="span3">
+                            <div id="sabnzbd-widget" class="widget widget-table">
+                                <div class="widget-header">
+                                    <i class="icon-monitor"></i>
+                                    <h3>
+                                        SABnzbd Speed
+                                    </h3>
+                                    <div id="refresh-sabspeed" class="btn js-refresh-info"><span class="icon-refresh"></span></div>
+                                </div><!-- /widget-header -->
+                                <div class="widget-content">
+
+                                    <div style="padding:0px; text-align: center;">
+                                        <i class="icon-download" style="font-size:18px;"></i>
+                                        <span class="lead value odometer" style="margin-top:11px;" id="sabspeed-rate-downstream">0</span>
+                                        <span class="lead">Mbps</span>
+                                    </div>
+
+                                </div><!-- /widget-content -->
+                            </div><!-- /widget -->
+                        </div><!-- /span -->
                       <div class="row">
                         <div class="span4">
                             <div id="netstat-widget" class="widget widget-table">
