added GA tracking

--- a/index.html
+++ b/index.html
@@ -448,5 +448,15 @@
         <script src="js/odometer.js" type="text/javascript"></script>
         <script src="js/dashboard.js" type="text/javascript"></script>
         <script src="js/base.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try{
+			var pageTracker = _gat._getTracker("UA-44168418-2");
+			pageTracker._trackPageview();
+		} catch(err) {}
+	</script>
     </body>
 </html>
