Layout fix for loss of row integrity caused by local storage reloading function. widgets now have min height to prevent breakage in rows

--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
                             A simple web dashboard to monitor your server.
                         </div>
                     </div>
-                    <div id="widgets" class="">
+                    <div id="widgets">
 
-                    <div class="row">
                         <div class="span3">
                             <div id="general-info-widget" class="widget widget-table action-table">
                                 <div class="widget-header">
@@ -204,9 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                      </div><!-- ./row -->
 
-		      <div class="row">			
                         <div class="span6">
                             <div id="disk-usage-widget" class="widget widget-table">
                                 <div class="widget-header">
@@ -291,9 +288,7 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span -->
-                      </div> <!-- ./row -->
 
-                      <div class="row">
                         <div class="span4">
                             <div id="netstat-widget" class="widget widget-table">
                                 <div class="widget-header">
@@ -338,9 +333,7 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span -->
-                       </div><!--./row -->
 
-                      <div class="row">
                         <div class="span4">
                             <div id="users-widget" class="widget widget-table action-table">
                                 <div class="widget-header">
@@ -383,9 +376,7 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span6 -->
-                       </div><!--./row -->
 
-                      <div class="row">
                         <div class="span12">
                             <div id="process-widget" class="widget widget-table">
                                 <div class="widget-header">
@@ -403,9 +394,7 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span -->
-		       </div><!-- ./row -->
 
-                      <div class="row">
                         <div class="span12">
                             <div id="swap-widget" class="widget widget-table">
                                 <div class="widget-header">
@@ -420,8 +409,6 @@
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
                         </div><!-- /span -->
-		       </div><!-- ./row -->
-
 
                     </div><!-- #/widgets -->
                 </div>
