bandwidth - rewrote code to return all network interfaces interfaces regardless of name

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                 </div><!-- /widget-header -->
                                 <div class="widget-content">
                                     <div style="padding:10px;text-align:center;">
-                                        RX: <span class="lead odometer" style="margin-top:11px;" id="bw-rx">0</span>&nbsp;&nbsp;|&nbsp;&nbsp; TX: <span class="lead odometer" style="margin-top:11px;" id="bw-tx"></span>
+                                        <i style="color:#19bc9c; font:20px/2em 'Open Sans',sans-serif;" class="icon-#" id="bw-int">eth0:</i>&nbsp; RX: <span class="lead odometer" style="margin-top:11px;" id="bw-rx">0</span>&nbsp;&nbsp;|&nbsp;&nbsp; TX: <span class="lead odometer" style="margin-top:11px;" id="bw-tx"></span>
                                     </div>
                                 </div><!-- /widget-content -->
                             </div><!-- /widget -->
