replaced files to the new structure remove Loader and autoloader as redundant

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="brand" href="./">linux-dash</a>
+                    <a class="brand" href="../">linux-dash</a>
                     <div class="nav-collapse">
 
                 <ul class="nav pull-right">
